--- a/app/templates/admin/add_product.html
+++ b/app/templates/admin/add_product.html
@@ -2,6 +2,10 @@
 
 {% block title %}➕ Add Product - Admin{% endblock %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/add_edit_product.css') }}">
+{% endblock %}
+
 {% block content %}
     <div class="admin-form-container">
         <!-- Header -->
