css for product_details templates

--- a/app/templates/main/product_detail.html
+++ b/app/templates/main/product_detail.html
@@ -2,6 +2,10 @@
 
 {% block title %}{{ product.name }} - Shopping On Tuesday{% endblock %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/product_detail.css') }}">
+{% endblock %}
+
 {% block content %}
     <!-- Breadcrumb Navigation -->
     <nav class="breadcrumb">
