--- a/app/templates/main/product_detail.html
+++ b/app/templates/main/product_detail.html
@@ -102,6 +102,11 @@
                 {% endif %}
             </div>
 
+            <!--Trust badges-->
+            {% from 'components/trust_badges.html' import render_trust_badges %}
+
+            {{ render_trust_badges() }}
+
             <!-- Product Meta Information -->
             <div class="product-meta">
                 <div class="meta-item">
