displayed highlight col in forms

--- a/app/templates/admin/add_product.html
+++ b/app/templates/admin/add_product.html
@@ -96,7 +96,13 @@
                         </div>
                     {% endif %}
                 </div>
+                
+                <div class="form-group">
+                    {{ form.highlights.label }}
+                    {{ form.highlights(class='form-control', rows='5') }}
+                </div>
             </div>
+        
             
             <!-- Category -->
             <div class="form-group">
