--- a/app/templates/admin/edit_product.html
+++ b/app/templates/admin/edit_product.html
@@ -101,6 +101,11 @@
                         </div>
                     {% endif %}
                 </div>
+
+                <div class="form-group">
+                    {{ form.highlights.label }}
+                    {{ form.highlights(class='form-control', rows='5') }}
+                </div>
             </div>
 
             <!-- Current Discount Preview (if applicable) -->
