Fixed product highlights on product_details templates

--- a/app/templates/main/product_detail.html
+++ b/app/templates/main/product_detail.html
@@ -106,7 +106,7 @@
             {% if product.highlights %}
             <div class="product-highlights-section">
                 <h3>Product Highlights</h3>
-                <ul class="hightlight-list">
+                <ul class="highlight-list">
                     {% for highlight in product.highlights.split('\n') %}
                         {% if highlight.strip() %}
                             <li>{{ highlight.strip() }}</li>
