Move Instagram URL to Flask config

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,7 +44,7 @@
             <div class="footer-links">
                 <a href="#" id="reportBugLink">🐛 Report a Bug</a>
                 <a href="#" id="aboutLink">About Me</a>
-                <a href="https://instagram.com/blu3_bird_" target="_blank">Instagram</a>
+                <a href="{{ instagram_url }}">Instagram</a>
                 <a href="https://github.com/blu3-bird" target="_blank">GitHub</a>
             </div>
         </div>
