--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@
             <a href="/" class="logo">
                 <img src="{{ url_for('static', filename='uploads/logo.png') }}" alt="Shopping On Tuesday"
                     onerror="this.style.display='none'">
-                <span>🛍️ Shopping On Tuesday</span>
+                <span id="name_logo">🛍️ Shopping On Tuesday</span>
             </a>
 
             <!-- Navigation Links -->
