--- a/app/static/css/500.css
+++ b/app/static/css/500.css
@@ -1,10 +1,11 @@
 body {
     font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial;
-    background: #f4f7f9;
+    /* background: #f4f7f9; */
     color: #222;
     text-align: center;
     padding: 6rem 1rem;
     margin: 0;
+    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
 }
 
 /* Card */
