Change footer class from 'footer-content' to 'site-footer'

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,7 +39,7 @@
 
     <!-- Footer -->
     <footer>
-        <div class="footer-content">
+        <div class="site-footer">
             <p>&copy; <script>document.write(new Date().getFullYear())</script> Shopping On Tuesday. Anime & Stationery</p>
 
             <div class="footer-links">
